jenkins/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "nsjenkins"
  labels:
    name: "jenkins"
