jenkins/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    name: "jenkins"
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: jenkins-http
      targetPort: 8080
  selector:
    app: jenkins

---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  labels:
    name: "jenkins"
spec:
  type: ClusterIP
  ports:
    - port: 50000
      name: jnlp
      targetPort: 50000
  selector:
    app: jenkins
