jenkins/jenkins_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  labels:
    name: "jenkins"
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx/nginx-errors
    nginx.ingress.kubernetes.io/custom-http-errors: "403,404,500,502,503,504"
  namespace: nsjenkins
spec:
  rules:
  - host: jenkins.k8s.local
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: jenkins
              port:
                number: 8080
